deploy/base/north-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: north
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: north
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: north
    spec:
      containers:
      - args:
        - pip install --no-cache-dir flask >/tmp/pip.log 2>&1 && python /opt/app/app.py
        command:
        - bash
        - -lc
        image: registry.access.redhat.com/ubi9/python-311:latest
        imagePullPolicy: Always
        name: north
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /assets
          name: assets
          readOnly: true
        - mountPath: /opt/app
          name: app
        - mountPath: /stage
          name: stage-dashboard
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: north-assets
        name: assets
      - configMap:
          defaultMode: 420
          name: north-app
        name: app
      - configMap:
          defaultMode: 420
          name: north-stage-dashboard
        name: stage-dashboard
