deploy/base/south-hello-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: south-hello-site
  name: south-hello-site
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: south-hello-site
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: south-hello-site
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/qr-demo-qa/south-hello-site:latest
        imagePullPolicy: Always
        name: south-hello-site
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
