deploy/base/south-hello-site-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: south-hello-site
  name: south-hello-site
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: south-hello-site
  sessionAffinity: None
  type: ClusterIP
