deploy/base/north-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/set-forwarded-headers: append
    haproxy.router.openshift.io/timeout: 3600s
  name: north
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: north
    weight: 100
  wildcardPolicy: None
