deploy/base/south-hello-site-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: south-hello-site
  name: south-hello-site
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: south-hello-site
    weight: 100
  wildcardPolicy: None
