deploy/base/south-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: south-ui
  name: south-ui
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: south-ui
    weight: 100
  wildcardPolicy: None
